--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "cSpell.words": [
     "Farmdroid",
+    "GNSS",
     "klimaneutral",
     "Leitfähigkeitssensoren",
-    "Nahinfrarotspektroskopie"
+    "Nahinfrarotspektroskopie",
+    "Solarpanels"
   ],
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
